--- a/lab/exercise1/index.html
+++ b/lab/exercise1/index.html
@@ -61,7 +61,7 @@
             height: 40vh;
             width: 40vw;
             margin-top: 50px; 
-        }
+        }ere
 
         
          img:hover {
