--- a/studio.html
+++ b/studio.html
@@ -21,6 +21,7 @@
         <a href="studio/exercise3/index.html"> Exercise 3 </a> <p>
         <a href="studio/exercise4/index.html"> Exercise 4 </a> <p>
         <a href="studio/exercise5/index.html"> Exercise 5 </a> <p>
+        <a href="studio/studioreading.html"> Reading Responses </a> <p>
     
     </div>
     
