--- a/lab/exercise2/index.html
+++ b/lab/exercise2/index.html
@@ -65,10 +65,10 @@
     </div> <center>
     
     <div id="content"> 
-            <div id="n"> N </div>
-             <div id="y"> Y </div>
-                 <div id="p"> P </div>
-                     <div id="l"> L </div>
+            <div> N </div>
+             <div> Y </div>
+                 <div> P </div>
+                     <div> L </div>
     
    
     </div>  </center>
