--- a/studio/studioreading.html
+++ b/studio/studioreading.html
@@ -42,7 +42,11 @@ This reading reinforced the fact that one story can be told and interpreted in m
 <b> “Skin, scroll, stare”</b> <p>
 
 I think websites blur the lines between artists and designers. It’s not just about the content anymore, but also the presentation. Could a designer be called an artist and vice versa? Websites are very technical, but without an artistic voice, it does not reflect its intentions or purpose. <br> 
-I believe the purpose of a website is to communicate, and the purpose of an artist or designer is to do the same. Technology has the widest reach when it comes to spreading messages or content and it is the perfect platform to curate art. 
+I believe the purpose of a website is to communicate, and the purpose of an artist or designer is to do the same. Technology has the widest reach when it comes to spreading messages or content and it is the perfect platform to curate art. <p>
+            
+<b> "Research and Destroy: A Plea for Design as Research"</b><p>
+            Aristotle once said that the soul never thinks without an image. I believe that design creates not only images, but lasting impressions on the world around us and the society we live in. We have more people predicting the future when we need people creating it. <br> 
+            I think failed design leads to more improvement. As designers, it’s our job to fail multiple times, because otherwise, it’s not hard work. The entire world is a prototype and everyday is a different version. Flaws in design come about when a people feel excluded. “No. I don’t think the Empire had Wookiees in mind when they designed it, Chewie” said Han Solo to Chewbacca about the Tydirium imperial shuttle they were flying in the movie Star Wars. Well, if all design was great design, we would not have many moments where we laugh. <p>
         
         </div>
     </body>
