--- a/lab/exercise2/index.html
+++ b/lab/exercise2/index.html
@@ -27,7 +27,9 @@
     align-items: center;
 }
         
-
+  #navigation div::before {
+                content: url(artdeco.jpeg); 
+            }
 
 #content div:nth-child(even){
     background:  ;
