--- a/lab/exercise2/newspaperposters.html
+++ b/lab/exercise2/newspaperposters.html
@@ -31,6 +31,7 @@
 #content div:nth-child(even){
     background:  ;
 }
+             a:hover{ background-color: rosybrown;}
 
 img {
     width: 100%;
