--- a/studio.html
+++ b/studio.html
@@ -22,6 +22,7 @@
         <a href="studio/exercise4/index.html"> Exercise 4 </a> <p>
         <a href="studio/exercise5/index.html"> Exercise 5 </a> <p>
         <a href="studio/studiop1/index.html"> Project 1 </a> <p>
+         <a href="studio/screensaver/index.html"> Project 2 </a> <p>
         <a href="studio/studioreading.html"> Reading Responses </a> <p>
         
     
