--- a/lab.html
+++ b/lab.html
@@ -21,6 +21,7 @@
         <a href="lab/exercise3/index.html"> Exercise 3 </a> <p>
         <a href="lab/exercise4/index.html"> Exercise 4 </a> <p>
         <a href="lab/exercise5/index.html"> Exercise 5 </a> <p>
+        <a href="lab/cILabGame/index.html"> Final Project </a> <p>
         <a href="lab/labreading.html"> Reading Responses </a> <p>
         
     
